k8s_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regtech-app-service
  labels:
    app: regtech-app
spec:
  selector:
    app: regtech-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
